--- a/assets/css/app.rtl.css
+++ b/assets/css/app.rtl.css
@@ -62,6 +62,95 @@
     right:7%;
     color: #8492A6;
 }
+.activeNavItem{
+    background: #036C9C;
+}
+/* editProfile */
+.activeRightTab{
+    background:#036C9C;
+    border-color:#036C9C!important;
+    color:white;
+    position:relative;
+    right:8px;
+}
+.border-active{
+    border-color:#036C9C!important;    
+}
+/* edit profile */
+/* notifications */
+.notificationText{
+    position:relative;
+    top:4px;
+    margin-left: 4px;
+    margin-right: 4px;
+}
+.notificationData{
+    position: relative;
+    top: 14px;
+}
+/* notifications */
+/* messages */
+.closeChat, 
+.openchat{
+    display: none;
+    position:absolute;
+    top:21px;
+    left:13px;
+}
+@media(max-width:991px){
+    .closeChat, 
+    .openchat{
+        display: block;
+    }
+}
+.chat:hover{
+    background:#e6ebf5;
+}
+.message-box span{
+    max-width: 35%;
+    border-radius: 7.5px;
+    box-shadow: 0 1px 0.5px rgba(11, 20, 26, .13);
+    padding:6px 7px 8px 9px;
+}
+.outgoing-message, .incomming-message{
+    margin-top:30px!important;
+}
+.outgoing-message span{
+    background:#d9fdd3;
+}
+.incomming-message span{
+    position:relative;
+    right:64%;
+    background:#ffffff;
+}
+.chats{
+    padding-right: 0px;
+    margin-right: 0px;
+    padding-left: 0px;
+    margin-left: 0px;
+}
+.chat-text{
+    padding:0px 3px 0px 0px;
+    margin:0px 3px 0px 0px;
+}
+.chats-container{
+    height:356px;
+    background-color: #f5f7fb;
+}
+/* messages */
+.activeLeftTab{
+    background:#036C9C;
+    border-color:#036C9C!important;
+    color:white;
+    position:relative;
+    left:5px;
+}
+.activeNavItem .dropdown-menu{
+    display: block;
+    background: #03182c;
+    width: 100%;
+    text-align: right;
+}
 *{
     font-family: 'Cairo', sans-serif;
 }
@@ -287,7 +376,7 @@ li a {
 }
 @media(max-width:991px){
     aside{
-        position:absolute;
+        position:absolute!important;
         left:100%;
     }
 }
